# daisy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  INTERNAL_DIFFERENCES.md  LICENSE  MIGRATION.md  MIGRATION_REPORT.md  Makefile  README.md  REFACTOR.md  api.html  caroline_tutorial.html  conf.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  release.html  release.rst  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  tutorial.html  tutorial.ipynb  will_tutorial.html
.claude/: settings.local.json
.doctrees/: api.doctree  caroline_tutorial.doctree  conf.doctree  environment.pickle  index.doctree  release.doctree  tutorial.doctree  will_tutorial.doctree
_sources/: api.rst.txt  caroline_tutorial.ipynb.txt  conf.py.txt  index.rst.txt  release.rst.txt  will_tutorial.ipynb.txt
benchmarks/: bench_dependency_graph.py  bench_worker_scaling.py  benchmark_dep_graph.py  block_scaling_results.json  dep_graph_results.json  worker_scaling_results.json
daisy/: __init__.py  actor.py  array.py  block.py  block_bookkeeper.py  blocks.py  cl_monitor.py  client.py  client_scheduler.py  context.py  convenience.py  coordinate.py  dask_actors_scheduler.py  dask_scheduler.py  dask_scheduler_old.py  datasets.py  dependency_graph.py  dynamic_blocks.py  freezable.py  graph.py  klb_adaptor.py  logging.py  message.py  parameter.py  processes.py  processing_queue.py  psudo_scheduler.py  ready_surface.py  roi.py  scheduler.py  scheduler_include.py  serial_server.py  server.py  server_observer.py  task.py  task_state.py  task_worker_pools.py  tcp.py  tcp_client.py  tcp_server.py  (+3 more)
daisy-core/: Cargo.toml
daisy-core/src/: block_bookkeeper.rs  coordinate.rs  dependency_graph.rs  done_marker.rs  error.rs  lib.rs  pipeline.rs  protocol.rs  ready_surface.rs  resource_allocator.rs  roi.rs  scheduler.rs  serial.rs  server.rs  task.rs  task_state.rs
daisy-core/tests/: integration_tcp.rs
daisy-py/: Cargo.toml
daisy-py/python/daisy/: __init__.py  _compat.py  _daisy.pyi  _pipeline.py  _progress.py  _runner.py  _task.py  logging.py  v1_compat.py  v2.py
daisy-py/src/: lib.rs  py_block.rs  py_callbacks.rs  py_context.rs  py_dep_graph.rs  py_pipeline.rs  py_roi.rs  py_scheduler.rs  py_server.rs  py_sync_client.rs  py_task.rs  py_task_state.rs
dev/: MIGRATION_REPORT.md  REFACTOR.md
docs/: ABANDONMENT.md  ARCHITECTURE.md  DONE_MARKERS.md  Makefile  PROTOCOL.md  README.md  RUN_STATS.md  SCHEDULER.md  WORKER_POOL_COORDINATION.md  WORKER_SHUTDOWN_FLOWS.md  api.rst  conf.py  index.rst
examples/: README.md  astronaut_pipeline.py  basic_workflow.py  batch_task.py  chaining_example.py  daisy_quickstart.ipynb  gaussian_smoothing.py  gaussian_smoothing1.py  gaussian_smoothing2.py  hdf_to_zarr.py  mws.py  mws_block_function.py  mws_block_function_with_error.py  mws_done_marker.py  mws_worker_function.py  mws_worker_function_with_error.py  requirements.txt  stress_million_blocks.py  stress_test.py  tutorial.py  tutorial_config.json  tutorial_worker.py  tutorial_worker_config.py  visualize.py  will_tutorial.py
gerbera-core/: Cargo.toml
gerbera-py/: Cargo.toml
notebooks/: tutorial.html
parked_tests/: test_graph.py  test_graph_meta_collection.py
peach/: __init__.py  array.py  block.py  blocks.py  convenience.py  dask_scheduler.py  datasets.py  luigi_scheduler.py  processes.py  roi.py  targets.py  tasks.py
tests/: __main__.py  conf.py  conftest.py  process_block.py  process_block_or_die.py  process_block_or_quit.py  test_1d.py  test_3d.py  test_array.py  test_arrays.py  test_block_timeout.py  test_blockwise_basics.py  test_client.py  test_clients_close.py  test_convenience.py  test_dask.py  test_dead_workers.py  test_dependency_graph.py  test_done_marker.py  test_fit.py  test_graph.py  test_graph_attribute_functions.py  test_graph_meta_collection.py  test_graph_provider_join.py  test_graph_read_blockwise.py  test_json_observer.py  test_keyboard_interrupt.py  test_klb_adaptor.py  test_roi.py  (+16 more)
(+117 files in other folders)
