[project]
name = "daisy"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.65",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "daisy-py/Cargo.toml"
python-source = "daisy-py/python"
module-name = "daisy._daisy"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "filelock>=3.29.0",
]
examples = [
    "ipykernel>=7.2.0",
    "lsd-lite>=1.0.0",
    "matplotlib>=3.10.9",
    "mwatershed>=0.5.2",
    "numpy>=2.2.6",
    "rich>=15.0.0",
    "scikit-image>=0.26.0",
    "zarr>=3.1.6",
]
