[package]
name = "daisy-core"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
memmap2 = "0.9"
sha2 = "0.10"
sysinfo = "0.32"
libc = "0.2"
