[package]
name = "daisy-py"
version = "2.0.0"
edition = "2024"
description = "Python bindings for daisy-core"
license = "MIT"
authors = ["William Patton <wllmpttn24@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/funkelab/daisy"
homepage = "https://github.com/funkelab/daisy"
publish = false

[lib]
name = "_daisy"
crate-type = ["cdylib"]

[dependencies]
daisy-core = { path = "../daisy-core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
petgraph = "0.6"
